--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "foundation": "~5.5.2"
+    "foundation": "~5.5.2",
+    "foundation-datepicker": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
