--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "foundation": "~5.5.2",
-    "foundation-datepicker": "~1.4.0"
+    "foundation-datepicker": "~1.4.0",
+    "angular-datetime": "~1.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
