--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0",
     "foundation": "~5.5.2",
     "foundation-datepicker": "~1.4.0",
-    "angular-datetime": "~1.2.3"
+    "angular-datetime": "~1.2.3",
+    "ng-file-upload": "~7.0.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
